2003-12-13  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Make the page titles work.

	* src/yelp-toc-pager.c:
	- Emit a finish signal.

2003-12-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-html-gtkhtml2.c:
	- Possible fix problem with Find (#128905) (Chee Bin HOH)
	- Fix crasher with Find (#128784) (Chee Bin HOH)

	* src/yelp-window.c:
	- Select existing text in Find dialog (Shaun McCance)

2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.1.

2003-12-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Fixed a crasher with gnome_vfs_directory_close.

	* src/yelp-window.c:
	- Moved a declaration to the beginning for ANSI C.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-pager.c:
	- Checking for NULL in pager_set_property before g_object_ref'ing.

2003-12-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Patch from Diego González to fix crashing bug in g_object_new.

2003-12-05  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c
	- Patch from Chee Bin HOH to add Back, Forward, and Find in Page

2003-12-03  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Patch from Joe Markus Clarke not to free un-malloc'd memory.

	* src/yelp-toc-pager.c:
	- Fixed problem with un-malloc'd memory being free found by
	  Joe Markus Clarke.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/.cvsignore:
	- It's test-pager, not yelp-pager.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/.cvsignore:
	* src/.cvsignore:
	- Adding data/toc.xml and src/test-pager to .cvsignore

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Change to the way toc pages are pruned so that we don't get orphaned
	  Categories headers.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.0.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Removed the DOCTYPE, because it was passing straight through intltool